tests/baselines/reference/invalidUnicodeEscapeSequance3.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance3.ts (3 errors) ====
    a\u
     
!!! error TS1127: Invalid character.
    ~
!!! error TS2304: Cannot find name 'a'.
      ~
!!! error TS2304: Cannot find name 'u'.